2009-01-14  Michael Moss  <mmoss@chromium.org>

Reviewed by Eric Seidel.

        Workaround a skia limitation on repeated patterns, and remove extra
        transformations applied to pattern.
        https://bugs.webkit.org/show_bug.cgi?id=23332

        Fixes:
        LayoutTests/fast/canvas/patternfill-repeat.html
        LayoutTests/svg/W3C-SVG-1.1/pservers-grad-06-b.svg

        * platform/graphics/skia/PatternSkia.cpp:
        (WebCore::Pattern::createPlatformPattern):

Canonical link: https://commits.webkit.org/32119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39921 268f45cc-cd09-0410-ab3c-d52691b4dbfc